tests/fixtures/invalid/pow_dict_none_none.py
# Cannot call pow() with Dict[str, int], None, None
x = pow({"a": 1}, None, None)
